# pluribus

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: ralph-loop.local.md
src/pluribus/: agent_output.py  agents.py  cli.py  config.py  display.py  post_run.py  status_file.py  tasks.py  worktree.py
src/pluribus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_agent_loop_integration.py  test_agents.py  test_e2e_agent_loop.py  test_integration.py  test_tasks.py
